# crunchyroll-history-tracker

./: Cargo.toml  README.md
src/: main.rs
