[package]
name = "crunchyroll_history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
crunchyroll-rs = "0.12"
dotenvy = "0.15.7"
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
